--- a/src/app/components/patient-info-view/allergy-list-Patient/allergy-list-patient.component.html
+++ b/src/app/components/patient-info-view/allergy-list-Patient/allergy-list-patient.component.html
@@ -13,7 +13,7 @@
     <!-- Name Column -->
     <ng-container matColumnDef="Name">
       <th *matHeaderCellDef mat-header-cell> Name</th>
-      <td *matCellDef="let allergy" mat-cell> {{allergy.name}} </td>
+      <td *matCellDef="let allergy" mat-cell> {{allergy.name | lowercase}} </td>
     </ng-container>
 
 
@@ -22,23 +22,17 @@
       <th *matHeaderCellDef mat-header-cell style="text-align: right">
 
         <!-- Add button -->
-        <button color="primary" id="add-button" mat-mini-fab matTooltip="Neuen Allergietyp hinzufügen">
+        <button (click)="onAddNewOrEdit()" color="primary" id="add-button" mat-mini-fab matTooltip="Neuen Allergietyp hinzufügen">
           <mat-icon class="example-tab-icon">add</mat-icon>
         </button>
 
       </th>
 
-      <td *matCellDef="let name" mat-cell style="text-align: right">
+      <td *matCellDef="let allergy" mat-cell style="text-align: right">
 
         <!-- Edit button -->
-        <button id="edit-button" mat-icon-button matTooltip="Allergietyp editieren">
+        <button (click)="onAddNewOrEdit(allergy)" id="edit-button" mat-icon-button matTooltip="Allergietyp editieren">
           <mat-icon class="example-tab-icon">edit</mat-icon>
-        </button>
-
-        <!-- Delete button -->
-        <button (click)="deleteAllergy()" color="warn" id="delete-button"
-                mat-icon-button matTooltip="Allergietyp löschen">
-          <mat-icon class="example-tab-icon">delete</mat-icon>
         </button>
 
       </td>
