--- a/src/app/components/home-patient/my-profile-modal/my-profile-modal.component.html
+++ b/src/app/components/home-patient/my-profile-modal/my-profile-modal.component.html
@@ -3,7 +3,7 @@
 
     <div class="row" style="text-align: center">
       <h3>
-        Mein Profil
+        {{modalTitle}}
       </h3>
     </div>
 
@@ -11,7 +11,7 @@
 
     <div class="row" style="text-align: right">
 
-      <button (click)="changeDisabled = false" *ngIf="changeDisabled" color="primary"
+      <button (click)="editMode = true" *ngIf="!editMode" color="primary"
               id="edit-button"
               mat-mini-fab
               matTooltip="Mein Profil editieren"
@@ -19,14 +19,14 @@
         <mat-icon class="example-tab-icon">edit</mat-icon>
       </button>
 
-      <button (click)="changeDisabled = true" *ngIf="!changeDisabled"
+      <button (click)="editMode = false" *ngIf="editMode"
               id="cancel-button"
               mat-raised-button
               matTooltip="Meine Änderungen abbrechen">
         Abbrechen
       </button>
 
-      <button (click)="onFormSubmit()" *ngIf="!changeDisabled" [disabled]="!receivedData.firstName || !receivedData.lastName"
+      <button (click)="onFormSubmit()" *ngIf="editMode" [disabled]="!person.firstName || !person.lastName"
               color="primary"
               id="save-button"
               mat-raised-button
@@ -43,8 +43,8 @@
           <label class="required">Vorname *</label>
           <input
               #firstNameId="ngModel"
-              [(ngModel)]="receivedData.firstName"
-              [disabled]="changeDisabled"
+              [(ngModel)]="person.firstName"
+              [disabled]="!editMode"
               name="firstName"
               required
               type="text">
@@ -54,8 +54,8 @@
           <label class="required">Nachname *</label>
           <input
               #lastNameId="ngModel"
-              [(ngModel)]="receivedData.lastName"
-              [disabled]="changeDisabled"
+              [(ngModel)]="person.lastName"
+              [disabled]="!editMode"
               name="lastName"
               required
               type="text">
@@ -65,7 +65,7 @@
           <label class="required">Benutzername</label>
           <input
               #userNameId="ngModel"
-              [(ngModel)]="receivedData.userName"
+              [(ngModel)]="person.userName"
               disabled
               name="userName"
               required
@@ -79,8 +79,8 @@
           <label class="required">Beruf</label>
           <input
               #professionId="ngModel"
-              [(ngModel)]="receivedData.profession"
-              [disabled]="changeDisabled"
+              [(ngModel)]="person.profession"
+              [disabled]="!editMode"
               name="profession"
               required
               type="text">
@@ -90,8 +90,8 @@
           <label class="required">Handynummer</label>
           <input
               #phoneNumberId="ngModel"
-              [(ngModel)]="receivedData.phoneNumber"
-              [disabled]="changeDisabled"
+              [(ngModel)]="person.phoneNumber"
+              [disabled]="!editMode"
               name="phoneNumber"
               required
               type="number">
@@ -101,8 +101,8 @@
           <label class="required">E-Mail</label>
           <input
               #EMailId="ngModel"
-              [(ngModel)]="receivedData.email"
-              [disabled]="changeDisabled"
+              [(ngModel)]="person.email"
+              [disabled]="!editMode"
               name="email"
               required
               type="email">
@@ -117,9 +117,9 @@
         <div class="col-sm-3" style="margin-bottom: 15px">
           <label class="required">Strasse</label>
           <input
-              #addressId="ngModel"
-              [(ngModel)]="receivedData.address.streetAndNumber"
-              [disabled]="changeDisabled"
+              #streetAndNumberId="ngModel"
+              [(ngModel)]="person.address.streetAndNumber"
+              [disabled]="!editMode"
               name="streetAndNumber"
               required
               type="text">
@@ -128,9 +128,9 @@
         <div class="col-sm-3" style="margin-bottom: 15px">
           <label class="required">Plz</label>
           <input
-              #addressId="ngModel"
-              [(ngModel)]="receivedData.address.postalCode"
-              [disabled]="changeDisabled"
+              #postalCodeId="ngModel"
+              [(ngModel)]="person.address.postalCode"
+              [disabled]="!editMode"
               name="postalCode"
               required
               type="text">
@@ -139,9 +139,9 @@
         <div class="col-sm-3" style="margin-bottom: 15px">
           <label class="required">Stadt</label>
           <input
-              #addressId="ngModel"
-              [(ngModel)]="receivedData.address.city"
-              [disabled]="changeDisabled"
+              #cityId="ngModel"
+              [(ngModel)]="person.address.city"
+              [disabled]="!editMode"
               name="city"
               required
               type="text">
@@ -149,9 +149,9 @@
         <div class="col-sm-3" style="margin-bottom: 15px">
           <label class="required">Land</label>
           <input
-              #addressId="ngModel"
-              [(ngModel)]="receivedData.address.country"
-              [disabled]="changeDisabled"
+              #countryId="ngModel"
+              [(ngModel)]="person.address.country"
+              [disabled]="!editMode"
               name="country"
               required
               type="text">
