--- a/src/app/components/patient-info-view/diagnosis-list-patient/diagnosis-list-patient.component.html
+++ b/src/app/components/patient-info-view/diagnosis-list-patient/diagnosis-list-patient.component.html
@@ -34,7 +34,7 @@
       <th *matHeaderCellDef mat-header-cell style="text-align: right; width: 20%">
 
         <!-- Add button -->
-        <button color="primary" id="add-button" mat-mini-fab matTooltip="Neue Untersuchung hinzufügen">
+        <button *ngIf="patientId" color="primary" id="add-button" mat-mini-fab matTooltip="Neue Untersuchung hinzufügen">
           <mat-icon class="example-tab-icon">add</mat-icon>
         </button>
 
@@ -43,12 +43,12 @@
       <td *matCellDef="let diagnosis" mat-cell style="text-align: right">
 
         <!-- Edit button -->
-        <button id="edit-button" mat-icon-button matTooltip="Untersuchung editieren">
+        <button *ngIf="patientId" id="edit-button" mat-icon-button matTooltip="Untersuchung editieren">
           <mat-icon class="example-tab-icon">edit</mat-icon>
         </button>
 
         <!-- Delete button -->
-        <button (click)="deleteDiagnosis()" color="warn" id="delete-button"
+        <button *ngIf="patientId" (click)="deleteDiagnosis()" color="warn" id="delete-button"
                 mat-icon-button matTooltip="Untersuchung löschen">
           <mat-icon class="example-tab-icon">delete</mat-icon>
         </button>
