--- a/src/app/components/personal-info-view/allergy-list/allergy-list.component.html
+++ b/src/app/components/personal-info-view/allergy-list/allergy-list.component.html
@@ -1,52 +1,52 @@
-
 <mat-card>
-  <table mat-table [dataSource]="allergyList" class="mat-elevation-z8">
+  <table [dataSource]="allergyList" class="mat-elevation-z8" mat-table>
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
     <!-- Position Column -->
     <ng-container matColumnDef="#">
-      <th mat-header-cell *matHeaderCellDef> # </th>
-      <td mat-cell *matCellDef="let personIndex = index"> {{personIndex + 1}} </td>
+      <th *matHeaderCellDef mat-header-cell> #</th>
+      <td *matCellDef="let personIndex = index" mat-cell> {{personIndex + 1}} </td>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="patient">
-      <th mat-header-cell *matHeaderCellDef> patient </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.firstName}} </td>
+    <ng-container matColumnDef="allergy">
+      <th *matHeaderCellDef mat-header-cell> Allergiename</th>
+      <td *matCellDef="let allergy" mat-cell> {{allergy.name | lowercase}} </td>
     </ng-container>
     <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> name </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.firstName}} </td>
+    <ng-container matColumnDef="patient">
+      <th *matHeaderCellDef mat-header-cell> Patient</th>
+      <td *matCellDef="let allergy" mat-cell></td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef style="text-align: right">
-        <button mat-mini-fab color="primary" id="add-button" matTooltip="add new patient">
+      <th *matHeaderCellDef mat-header-cell style="text-align: right">
+        <button (click)="onAddNewOrEdit()" color="primary" id="add-button" mat-mini-fab
+                matTooltip="add new allergy">
           <mat-icon class="example-tab-icon">add</mat-icon>
         </button>
       </th>
 
-      <td mat-cell *matCellDef="let patient" style="text-align: right">
+      <td *matCellDef="let allergy" mat-cell style="text-align: right">
 
 
-
-        <button mat-icon-button id="edit-button" matTooltip="edit patient">
+        <button (click)="onAddNewOrEdit(allergy)" id="edit-button" mat-icon-button
+                matTooltip="edit allergy">
           <mat-icon class="example-tab-icon">edit</mat-icon>
         </button>
 
-        <button mat-icon-button color="warn" id="delete-button"
-                (click)="deletePatient()" matTooltip="delete patient">
+        <button (click)="onDelete(allergy)" color="warn" id="delete-button"
+                mat-icon-button matTooltip="delete allergy">
           <mat-icon class="example-tab-icon">delete</mat-icon>
         </button>
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
+    <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
   </table>
 </mat-card>
 
