--- a/src/app/components/personal-info-view/diagnosis-list/diagnosis-list.component.html
+++ b/src/app/components/personal-info-view/diagnosis-list/diagnosis-list.component.html
@@ -1,64 +1,65 @@
-
 <mat-card>
-  <table mat-table [dataSource]="diagnosisList" class="mat-elevation-z8">
+  <table [dataSource]="diagnosisList" class="mat-elevation-z8" mat-table>
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
     <!-- Position Column -->
     <ng-container matColumnDef="#">
-      <th mat-header-cell *matHeaderCellDef> # </th>
-      <td mat-cell *matCellDef="let personIndex = index"> {{personIndex + 1}} </td>
+      <th *matHeaderCellDef mat-header-cell> #</th>
+      <td *matCellDef="let diagnosisIndex = index" mat-cell> {{diagnosisIndex + 1}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="patient">
-      <th mat-header-cell *matHeaderCellDef> patient </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.firstName}} </td>
+      <th *matHeaderCellDef mat-header-cell> diagnosis</th>
+      <td *matCellDef="let diagnosis" mat-cell> {{diagnosis.person?.name}} </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="examinations">
-      <th mat-header-cell *matHeaderCellDef> examinations </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.lastName}} </td>
+      <th *matHeaderCellDef mat-header-cell> Examinations</th>
+      <td *matCellDef="let diagnosis" mat-cell> {{diagnosis.lastName}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> date </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
+      <th *matHeaderCellDef mat-header-cell> Date</th>
+      <td *matCellDef="let diagnosis" mat-cell> {{diagnosis.examinationDate}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> type </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
+      <th *matHeaderCellDef mat-header-cell> Type</th>
+      <td *matCellDef="let diagnosis" mat-cell> {{diagnosis.bodyRegion}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef style="text-align: right">
-        <button mat-mini-fab color="primary" id="add-button" matTooltip="add new patient">
+      <th *matHeaderCellDef mat-header-cell style="text-align: right">
+        <button (click)="onAddNewOrEdit()" color="primary" id="add-button" mat-mini-fab
+                matTooltip="add new diagnosis">
           <mat-icon class="example-tab-icon">add</mat-icon>
         </button>
       </th>
 
-      <td mat-cell *matCellDef="let patient" style="text-align: right">
+      <td *matCellDef="let diagnosis" mat-cell style="text-align: right">
 
 
-        <button mat-icon-button id="edit-button" matTooltip="edit patient">
+        <button (click)="onAddNewOrEdit(diagnosis)" id="edit-button" mat-icon-button
+                matTooltip="edit diagnosis">
           <mat-icon class="example-tab-icon">edit</mat-icon>
         </button>
 
-        <button mat-icon-button color="warn" id="delete-button"
-                (click)="deletePatient()" matTooltip="delete patient">
+        <button (click)="onDelete(diagnosis)" color="warn" id="delete-button"
+                mat-icon-button matTooltip="delete diagnosis">
           <mat-icon class="example-tab-icon">delete</mat-icon>
         </button>
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
+    <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
   </table>
 </mat-card>
 
