--- a/src/app/components/personal-info-view/disease-list/disease-list.component.html
+++ b/src/app/components/personal-info-view/disease-list/disease-list.component.html
@@ -1,70 +1,72 @@
-
 <mat-card>
-  <table mat-table [dataSource]="diseaseList" class="mat-elevation-z8">
+  <table [dataSource]="diseasesList" class="mat-elevation-z8" mat-table>
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
     <!-- Position Column -->
     <ng-container matColumnDef="#">
-      <th mat-header-cell *matHeaderCellDef> # </th>
-      <td mat-cell *matCellDef="let personIndex = index"> {{personIndex + 1}} </td>
+      <th *matHeaderCellDef mat-header-cell> #</th>
+      <td *matCellDef="let personIndex = index" mat-cell> {{personIndex + 1}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="patient">
-      <th mat-header-cell *matHeaderCellDef> patient </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.firstName}} </td>
-    </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="undergoneSurgery">
-      <th mat-header-cell *matHeaderCellDef> undergoneSurgery </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.lastName}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="surgeryReason">
-      <th mat-header-cell *matHeaderCellDef> surgeryReason </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="surgeries">
-      <th mat-header-cell *matHeaderCellDef> surgeries </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
+      <th *matHeaderCellDef mat-header-cell>Patient</th>
+      <td *matCellDef="let disease" mat-cell>
+        {{disease.person?.firstName}} {{disease.person?.lastName}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="preExistingIllness">
-      <th mat-header-cell *matHeaderCellDef> preExistingIllness </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
+      <th *matHeaderCellDef mat-header-cell>Vorerkrankung</th>
+      <td *matCellDef="let disease" mat-cell>
+        <ul *ngFor="let illness of disease.preExistingIllnesses">
+          <li>{{illness.name}}</li>
+        </ul>
+      </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="undergoneSurgery">
+      <th *matHeaderCellDef mat-header-cell>Chirurgische Eingriffe?</th>
+      <td *matCellDef="let disease" mat-cell>
+        {{disease.undergoneSurgery ? 'Ja' : 'Nein'}}
+      </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="surgeryReason">
+      <th *matHeaderCellDef mat-header-cell>Operationsgrund</th>
+      <td *matCellDef="let disease" mat-cell> {{disease.surgeriesDetails}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef style="text-align: right">
-        <button mat-mini-fab color="primary" id="add-button" matTooltip="add new patient">
+      <th *matHeaderCellDef mat-header-cell style="text-align: right">
+        <button (click)="onAddNewOrEdit()" color="primary" id="add-button" mat-mini-fab
+                matTooltip="add new disease">
           <mat-icon class="example-tab-icon">add</mat-icon>
         </button>
       </th>
 
-      <td mat-cell *matCellDef="let patient" style="text-align: right">
+      <td *matCellDef="let disease" mat-cell style="text-align: right">
 
 
-        <button mat-icon-button id="edit-button" matTooltip="edit patient">
+        <button (click)="onAddNewOrEdit(disease)" id="edit-button" mat-icon-button
+                matTooltip="edit disease">
           <mat-icon class="example-tab-icon">edit</mat-icon>
         </button>
 
-        <button mat-icon-button color="warn" id="delete-button"
-                (click)="deletePatient()" matTooltip="delete patient">
+        <button (click)="onDelete(disease)" color="warn" id="delete-button"
+                mat-icon-button matTooltip="delete disease">
           <mat-icon class="example-tab-icon">delete</mat-icon>
         </button>
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
+    <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
   </table>
 </mat-card>
 
