--- a/src/app/components/personal-info-view/medication-in-take-list/medication-in-take-list.component.html
+++ b/src/app/components/personal-info-view/medication-in-take-list/medication-in-take-list.component.html
@@ -1,70 +1,70 @@
-
 <mat-card>
-  <table mat-table [dataSource]="medicationInTakeList" class="mat-elevation-z8">
+  <table [dataSource]="medicationInTakeList" class="mat-elevation-z8" mat-table>
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
     <!-- Position Column -->
     <ng-container matColumnDef="#">
-      <th mat-header-cell *matHeaderCellDef> # </th>
-      <td mat-cell *matCellDef="let personIndex = index"> {{personIndex + 1}} </td>
+      <th *matHeaderCellDef mat-header-cell> #</th>
+      <td *matCellDef="let personIndex = index" mat-cell> {{personIndex + 1}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="patient">
-      <th mat-header-cell *matHeaderCellDef> patient </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.firstName}} </td>
+      <th *matHeaderCellDef mat-header-cell>Patient</th>
+      <td *matCellDef="let medication" mat-cell> {{medication.person?.firstName}} </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="designation">
-      <th mat-header-cell *matHeaderCellDef> designation </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.lastName}} </td>
+      <th *matHeaderCellDef mat-header-cell>Medikamentname</th>
+      <td *matCellDef="let medication" mat-cell> {{medication.designation}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="dosage">
-      <th mat-header-cell *matHeaderCellDef> dosage </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
+      <th *matHeaderCellDef mat-header-cell>Dosierung</th>
+      <td *matCellDef="let medication" mat-cell> {{medication.dosage}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="startDate">
-      <th mat-header-cell *matHeaderCellDef> startDate </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
+      <th *matHeaderCellDef mat-header-cell>Startdatum</th>
+      <td *matCellDef="let medication" mat-cell> {{medication.startDate | date : 'dd-mm-yyyy'}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="bloodDiluent">
-      <th mat-header-cell *matHeaderCellDef> bloodDiluent </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
+      <th *matHeaderCellDef mat-header-cell>Blutverdünnungsmittel?</th>
+      <td *matCellDef="let medication" mat-cell> {{medication.bloodDiluent ? 'JA' : 'Nein'}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef style="text-align: right">
-        <button mat-mini-fab color="primary" id="add-button" matTooltip="add new patient">
+      <th *matHeaderCellDef mat-header-cell style="text-align: right">
+        <button (click)="onAddNewOrEdit()" color="primary" id="add-button" mat-mini-fab
+                matTooltip="add new medication">
           <mat-icon class="example-tab-icon">add</mat-icon>
         </button>
       </th>
 
-      <td mat-cell *matCellDef="let patient" style="text-align: right">
+      <td *matCellDef="let medication" mat-cell style="text-align: right">
 
 
-        <button mat-icon-button id="edit-button" matTooltip="edit patient">
+        <button (click)="onAddNewOrEdit(medication)" id="edit-button" mat-icon-button matTooltip="edit medication">
           <mat-icon class="example-tab-icon">edit</mat-icon>
         </button>
 
-        <button mat-icon-button color="warn" id="delete-button"
-                (click)="deletePatient()" matTooltip="delete patient">
+        <button (click)="onDelete(medication)" color="warn" id="delete-button"
+                mat-icon-button matTooltip="delete medication">
           <mat-icon class="example-tab-icon">delete</mat-icon>
         </button>
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
+    <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
   </table>
 </mat-card>
 
