--- a/src/app/components/personal-info-view/person-list/person-list.component.html
+++ b/src/app/components/personal-info-view/person-list/person-list.component.html
@@ -1,6 +1,6 @@
 
 <mat-card>
-  <table mat-table [dataSource]="patientList" class="mat-elevation-z8">
+  <table mat-table [dataSource]="filteredPersonsList" class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
@@ -32,23 +32,22 @@
     <!-- Symbol Column -->
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef style="text-align: right">
-        <button mat-mini-fab color="primary" id="add-button" matTooltip="add new patient">
+        <button mat-mini-fab color="primary" id="add-button" (click)="onAddNewPerson()"
+                [matTooltip]="personType === 'patienten'
+                ? 'Einen neuen Patien hinzufuegen' : 'Einen neuen Personal hinzufuegen'">
           <mat-icon class="example-tab-icon">add</mat-icon>
         </button>
       </th>
 
       <td mat-cell *matCellDef="let patient" style="text-align: right">
 
-        <button mat-icon-button id="patient-view-button" matTooltip="view patient info">
+        <button mat-icon-button id="person-view-button" (click)="onPersonInfo(patient)"
+                [matTooltip]="patient.type === 'patient' ? 'Patientinfos ansehen' : 'Personalinfos ansehen'">
           <mat-icon class="example-tab-icon">remove_red_eye</mat-icon>
         </button>
 
-        <button mat-icon-button id="edit-button" matTooltip="edit patient">
-          <mat-icon class="example-tab-icon">edit</mat-icon>
-        </button>
-
         <button mat-icon-button color="warn" id="delete-button"
-                (click)="deletePatient()" matTooltip="delete patient">
+                (click)="onDeletePatient(patient)" matTooltip="delete patient">
           <mat-icon class="example-tab-icon">delete</mat-icon>
         </button>
       </td>
