somes change on the travis build to point direct on AWS

--- a/src/app/components/home-patient/home-patient.component.html
+++ b/src/app/components/home-patient/home-patient.component.html
@@ -45,7 +45,7 @@
   <div class="card-container" style="margin-top: 90px">
 
       <a *ngIf="!currentUser.recorded" class="card" rel="noopener" routerLink="{{aufnahme_path}}"
-         style="margin-right: 10px; margin-bottom: 50px">
+         style="margin-right: 10px; margin-bottom: 50px" disabled="true">
         <img class="material-icons" style="margin-right: 7px"
              height="24" viewBox="0 0 24 24" width="24"
              src="../../../assets/logos/new-aufnahme.jpg">
