--- a/src/app/components/patient-info-view/allergy-list-Patient/allergy-list-patient.component.html
+++ b/src/app/components/patient-info-view/allergy-list-Patient/allergy-list-patient.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <table [dataSource]="allergyList" class="mat-elevation-z8" mat-table>
+  <table [dataSource]="currentUser.allergies" class="mat-elevation-z8" mat-table>
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
